# the-second-brain

./: .gitignore  LICENSE  README.md  environment-gpu.yml  environment.yml  pyproject.toml  requirements.txt  setup.py
configs/: __init__.py  coexclusion_pairs.json  coexclusion_pairs_default.json  publication_config_template.yaml
demo/: package-lock.json  package.json
demo/src/: App.css  App.tsx  index.css
demo/src/components/: Comparison.tsx  Evaluation.tsx  Footer.tsx  Generator.tsx  Header.tsx  Navigation.tsx  Overview.tsx  Temporal.tsx
examples/: benchmarking_example.py  biological_validation_example.py  complete_publication_pipeline_example.py  evaluation_workflow_example.py  figure_generation_example.py  quick_start_guide.py
outputs/baselines_compendium/: copula_corr.npy  copula_marginals.npy  dirichlet_alpha.npy  results.json  vae.pt
outputs/figures_compendium/: metrics_summary.json
outputs/realistic_compendium_v4/: best_model.pt
scripts/: aggregate_seeds.py  complete_publication_pipeline.py  convert_figures_to_png.py  create_all_paper_figures.py  create_clean_figures.py  display_figure_example.py  download_real_data.py  generate_compendium_figures.py  generate_compendium_figures_v2.py  generate_final_publication_results.py  generate_microbiome_figures.py  generate_paper_figures.py  generate_publication_quality_figures.py  load_compendium.py  run_ablations_realistic.py  run_ablations_realistic_agp.py  train_mfd_encoder.py  train_publication_models.py  train_realistic_model.py  verify_data.py
src/: __init__.py  baseline_training.py  baselines.py  benchmarking.py  clr_transform.py  coexclusion_loss.py  data_management.py  diffusion.py  diversity_loss.py  evaluation.py  exceptions.py  experiment_runner.py  figures.py  hyperbolic.py  hyperparameter_optimization.py  microbiome_datasets.py  model_zoo.py  neural_field.py  preprocessing.py  publication.py  publication_pipeline.py  rasterization.py  realistic_model.py  reproducibility.py  serialization.py  sparsity_loss.py  spatiotemporal.py  training.py  types.py  zero_inflated.py
